fixed some layout issues3

--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -13,6 +13,7 @@
   justify-content: space-between;
   cursor: pointer;
   display: none;
+  position: relative;
 }
 
 .line {
@@ -38,7 +39,6 @@
   gap: 30px;
   font-size: 25px;
   z-index: 999;
- 
 }
 
 @media screen and (max-width: 640px) {
