--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -70,6 +70,10 @@
   padding: 2px 0px;
 }
 
+.link:active {
+  border-bottom: 2px solid crimson;
+}
+
 @media screen and (max-width: 1280px) {
   .container {
    display: block;
@@ -79,4 +83,10 @@
     height: 300px;
     margin: 0 auto;
   }
+
+  .link {
+    margin-top: -20px;
+    margin-bottom: 15px;
+  }
+  
 }
