--- a/src/components/cardList/cardList.module.css
+++ b/src/components/cardList/cardList.module.css
@@ -4,7 +4,7 @@
 
 .title{
   font-size: 20px;
-  margin: 50px 0px;
+  margin: 30px 0px;
 }
 /* 
 
